--- a/sqlite-src/SQLite_Static_Library.vcxproj.filters
+++ b/sqlite-src/SQLite_Static_Library.vcxproj.filters
@@ -231,6 +231,12 @@
     <ClCompile Include="src\where.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\test_vfs.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\test_vfstrace.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\btree.h">
