VFS Compress template added based on trace.

--- a/sqlite-cli/sqlite-cli.vcxproj.filters
+++ b/sqlite-cli/sqlite-cli.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="sqlite-cli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="vfs_compress.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
