--- a/sqlite-cli/sqlite-cli.vcxproj
+++ b/sqlite-cli/sqlite-cli.vcxproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <ClCompile Include="sqlite-cli.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="vfs_compress.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
