--- a/sqlite-cli/sqlite-cli.vcxproj
+++ b/sqlite-cli/sqlite-cli.vcxproj
@@ -60,7 +60,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib1.2.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib\zlib1.2.5.stc.dbg.32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Manifest>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -88,7 +88,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib1.2.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib\zlib1.2.5.stc.rel.32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Manifest>
       <SuppressStartupBanner>true</SuppressStartupBanner>
