--- a/sqlite-shell/sqlite-shell.vcxproj
+++ b/sqlite-shell/sqlite-shell.vcxproj
@@ -59,7 +59,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib1.2.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib\zlib1.2.5.stc.dbg.32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -83,7 +83,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib1.2.5.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)$(Configuration)\SQLite_Static_Library.lib;$(SolutionDir)sqlite-src\zlib\zlib1.2.5.stc.rel.32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
