--- a/SqliteDll/SqliteDll.vcxproj
+++ b/SqliteDll/SqliteDll.vcxproj
@@ -54,7 +54,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;SQLITEDLL_EXPORTS;SQLITE_API=__declspec(dllexport);SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;SQLITEDLL_EXPORTS;SQLITE_API=__declspec(dllexport);SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;SQLITE_ENABLE_COLUMN_METADATA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)..\sqlite-src\;$(ProjectDir)..\sqlite-src\src</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -71,7 +71,7 @@
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;SQLITEDLL_EXPORTS;SQLITE_API=__declspec(dllexport);SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;SQLITEDLL_EXPORTS;SQLITE_API=__declspec(dllexport);SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;SQLITE_ENABLE_COLUMN_METADATA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)..\sqlite-src\;$(ProjectDir)..\sqlite-src\src</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <ExceptionHandling>false</ExceptionHandling>
