--- a/sqlite-src/SQLite_Static_Library.vcxproj
+++ b/sqlite-src/SQLite_Static_Library.vcxproj
@@ -53,7 +53,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;NO_TCL;_CRT_SECURE_NO_WARNINGS;SQLITE_DEBUG;SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;NO_TCL;_CRT_SECURE_NO_WARNINGS;SQLITE_DEBUG;SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;SQLITE_ENABLE_COLUMN_METADATA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -71,7 +71,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;NO_TCL;_CRT_SECURE_NO_WARNINGS;SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;NO_TCL;_CRT_SECURE_NO_WARNINGS;SQLITE_OS_WIN=1;SQLITE_THREADSAFE=1;SQLITE_TEMP_STORE=1;SQLITE_ENABLE_COLUMN_METADATA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
